# limin

./: .gitignore  README.md  demo.py  limin.py  llmc.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
examples/: log_probabilities.py  model_configuration.py  multiple_completions.py  multiple_tools.py  single_completion.py  structured_completion.py  tool_call.py
limin/: __init__.py  base.py  completion.py  structured_completion.py  tool_call.py
test/: test_base.py
